fix: match hero padding + spacing better

--- a/src/InPluginUpsells/resources/js/Hero.module.css
+++ b/src/InPluginUpsells/resources/js/Hero.module.css
@@ -1,7 +1,7 @@
 .hero {
 	display: grid;
-	gap: 1rem;
-	padding: 3.5rem 2rem;
+	gap: 0.95rem;
+	padding: 4.125rem 2rem 3.5rem;
 	text-align: center;
 }
 
